--- a/style.css
+++ b/style.css
@@ -131,8 +131,61 @@ section{
     color:var(--second-bg-color);
     letter-spacing:.1rem;
     font-weight: 600;
+    transition: 5s ease;
 }
 
 .btn:hover{
     box-shadow:none;
 }
+
+.about-img img{
+    height:250px;
+    width:250px;
+}
+
+.about{
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    gap:2rem;
+    background:var(--second-bg-color);
+}
+.heading{
+    text-align: center;
+    font-size:4.5rem;
+}
+
+.about-content h2{
+    text-align: left;
+    line-height:1.2;
+}
+.about-content h3{
+    font-size:2.6rem;
+
+}
+.about-content p{
+    font-size:1.6rem;
+    margin:2rem 0 3rem;
+    
+}
+.services h2{
+    margin-bottom:5rem;
+}
+.services-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap:wrap;
+    gap:2rem;
+}
+
+.services-container .services-box{
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius:2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+}
+
+
