--- a/style.css
+++ b/style.css
@@ -80,6 +80,21 @@ section{
  .home-img img{
     height:250px;
     width:250px;
+    animation: floatImage 4s ease-in-out infinite;
+ }
+
+ @keyframes floatImage{
+    0%{
+        transform: translateY(0);
+    }
+
+    50%{
+        transform: translateY(-2.4rem);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
  }
  .home-content  h3 {
      font-size: 2.2rem;
